Remove wrapper class constructors
As per JEP-390, wrapper class constructors which have been deprecated since java 9, will now be marked deprecated for removal.